# c64-test-harness

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.serena/: project.yml
docs/: bridge_networking.md  development.md  memory_safety.md  snapshot_interop.md  u64_recovery.md  uci_networking.md
examples/: custom_backend.py  direct_memory_test.py  drive_menu.py  play_sid.py  ultimate64_hello.py  wait_for_text.py
scripts/: U64_DEVICE_PROBE.md  bench_x25519_u64_turbo.py  bridge_ping_demo.py  cleanup-bridge-feth-macos.sh  cleanup-bridge-networking.sh  cleanup_vice_ports.py  install-skill.sh  play_chromatic_u64.py  play_scale_u64.py  probe-vice-feth.sh  probe_u64.py  probe_uci_network.py  prototype_monitor_logger.py  run_all_tests.py  run_all_u64_live.py  run_parallel_sha256.py  run_sid_u64_live.py  run_u64_parallel_locked.py  setup-bridge-feth-macos.sh  setup-bridge-tap.sh  setup-dev-env.sh  setup-tap-networking.sh  stress_cross_process.py  stress_port_allocation.py  stress_ten_instances.py  stress_u64_queue.py  teardown-bridge-feth-macos.sh  teardown-bridge-tap.sh  teardown-tap-networking.sh  test_binary_monitor.py  test_monitor_logging.py  test_uci_tcp_echo.py  three_windows.py  validate_ping.py  verify-dev-env.sh  verify_rrnet_registers.py  verify_tod_warp.py  verify_vice_ethernet.py
tests/: bridge_platform.py  conftest.py  test_binary_monitor.py  test_blind_agent_memory.py  test_blind_agent_probe.py  test_blind_agent_screen.py  test_bridge_ping.py  test_bridge_ping_tod.py  test_chromatic_capture_live.py  test_config.py  (+94 more)
(+64 files in other folders)
