[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "c64-test-harness"
version = "0.5.0"
description = "Reusable test harness for Commodore 64 programs via VICE emulator or hardware"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "C64 Test Harness Contributors" },
]
keywords = ["commodore64", "c64", "vice", "testing", "6502"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Emulators",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/c64_test_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
